--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "@sentry/react": "^7.19.0",
+    "@sentry/tracing": "^7.19.0",
     "@types/node": "^18.0.0",
     "ahooks": "^3.3.10",
     "antd": "^4.21.3",
